# spatial-dyn

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  Pipfile  README.md  annotated.html  api_documentation.html  articulated__body_8h_source.html  articulated__body__cache_8h_source.html  class_mex_function-members.html  class_mex_function.html  classes.html  classspatial__dyn_1_1_articulated_body-members.html  classspatial__dyn_1_1_articulated_body.html  classspatial__dyn_1_1_joint-members.html  classspatial__dyn_1_1_joint.html  classspatial__dyn_1_1_rigid_body-members.html  classspatial__dyn_1_1_rigid_body.html  classspatial__dyn_1_1_spatial_force-members.html  classspatial__dyn_1_1_spatial_force.html  classspatial__dyn_1_1_spatial_force_base-members.html  classspatial__dyn_1_1_spatial_force_base.html  classspatial__dyn_1_1_spatial_inertia-members.html  classspatial__dyn_1_1_spatial_inertia.html  classspatial__dyn_1_1_spatial_inertia_matrix-members.html  classspatial__dyn_1_1_spatial_inertia_matrix.html  classspatial__dyn_1_1_spatial_motion-members.html  classspatial__dyn_1_1_spatial_motion.html  classspatial__dyn_1_1_spatial_motion_base-members.html  classspatial__dyn_1_1_spatial_motion_base.html  ctrl-utils-CMakeLists.txt.in  dir_1a7219dad0498c215fa8682adb6fe520.html  dir_20906421e205ea7fc9aab01a4dabb4e5.html  dir_218a9e3cb5b25b749a8b0dc29285ef3b.html  dir_25205df789895db728d786a757b2675c.html  (+136 more)
_sources/: index.rst.txt
apps/: CMakeLists.txt
apps/opspace/: CMakeLists.txt  opspace.py
apps/opspace/python/: spatial_dyn_opspace.py
apps/redisgl/: main.py
cmake/: Catch2-CMakeLists.txt.in  Eigen3-CMakeLists.txt.in  FindEigen3.cmake.in  Findcpp_redis.cmake.in  Findnlohmann_json.cmake.in  SpatialDynConfig.cmake.in  cpp_redis-CMakeLists.txt.in  ctrl_utils-CMakeLists.txt.in  include_package.cmake  nlohmann_json-CMakeLists.txt.in  pybind11-CMakeLists.txt.in  rbdl-CMakeLists.txt.in  spatial_dynConfig.cmake.in  tinyxml2-CMakeLists.txt.in
cpp/: annotated.html  articulated__body_8h_source.html  articulated__body__cache_8h_source.html  classMexFunction-members.html  classMexFunction.html  classes.html  classspatial__dyn_1_1ArticulatedBody-members.html  classspatial__dyn_1_1ArticulatedBody.html  classspatial__dyn_1_1Joint-members.html  classspatial__dyn_1_1Joint.html  classspatial__dyn_1_1RigidBody-members.html  classspatial__dyn_1_1RigidBody.html  classspatial__dyn_1_1SpatialForce-members.html  classspatial__dyn_1_1SpatialForce.html  classspatial__dyn_1_1SpatialForceBase-members.html  classspatial__dyn_1_1SpatialForceBase.html  classspatial__dyn_1_1SpatialInertia-members.html  classspatial__dyn_1_1SpatialInertia.html  classspatial__dyn_1_1SpatialInertiaMatrix-members.html  classspatial__dyn_1_1SpatialInertiaMatrix.html  classspatial__dyn_1_1SpatialMotion-members.html  classspatial__dyn_1_1SpatialMotion.html  classspatial__dyn_1_1SpatialMotionBase-members.html  classspatial__dyn_1_1SpatialMotionBase.html  dir_1a7219dad0498c215fa8682adb6fe520.html  dir_20906421e205ea7fc9aab01a4dabb4e5.html  dir_218a9e3cb5b25b749a8b0dc29285ef3b.html  dir_25205df789895db728d786a757b2675c.html  dir_5c0d64f70903e893b1efe571a4b8de29.html  dir_634f23057dd15dc1a9eb9d9633ecc083.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_87666325f3596b7ac55b27cdf91c9f2d.html  dir_a18f8560923d05225de5d27800e6db1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e6df591b0639d4c4807ef64d058833e2.html  dir_e7a32ecae41ea4c6ee22170775b62153.html  discrete__dynamics_8h_source.html  dynamics__derivatives_8h_source.html  (+121 more)
python/: CMakeLists.txt  eigen.cc  spatialdyn.ArticulatedBody.html  spatialdyn.Geometry.html  spatialdyn.Graphics.html  spatialdyn.Joint.html  spatialdyn.Material.html  spatialdyn.RigidBody.html  spatialdyn.SpatialInertiad.html  spatialdyn.angular_jacobian.html  spatialdyn.cartesian_pose.html  spatialdyn.centrifugal_coriolis.html  spatialdyn.composite_inertia.html  spatialdyn.compute_opspace_control.html  spatialdyn.external_torques.html  spatialdyn.fdot.html  spatialdyn.forward_dynamics.html  spatialdyn.forward_dynamics_aba.html  spatialdyn.friction.html  spatialdyn.gravity.html  spatialdyn.hessian.html  spatialdyn.html  spatialdyn.inertia.html  spatialdyn.inertia_inverse.html  spatialdyn.inertia_inverse_aba.html  spatialdyn.integrate.html  spatialdyn.inverse_dynamics.html  spatialdyn.inverse_kinematics.html  spatialdyn.jacobian.html  spatialdyn.joint_space_control.html  spatialdyn.linear_jacobian.html  spatialdyn.mdot.html  spatialdyn.opspace_control.html  spatialdyn.orientation.html  spatialdyn.position.html
src/: CMakeLists.txt  articulated_body.cc  articulated_body.h  forward_dynamics.cc  forward_dynamics.h  forward_kinematics.cc  forward_kinematics.h  inverse_dynamics.cc  inverse_dynamics.h  joint.cc  main.cc  opspace_dynamics.cc  opspace_dynamics.h  opspace_dynamics_aba.cc  rigid_body.cc  spatial_math.h  tests.cc
src/Eigen/: MatrixPlugin.h  SpatialDeclarations.h  SpatialDyn.h  SpatialForce.h  SpatialForceBase.h  SpatialInertia.h  SpatialMotion.h  SpatialMotionBase.h  SpatialTransform.h
src/algorithms/: discrete_dynamics.cc  dynamics_derivatives.cc  forward_dynamics.cc  forward_kinematics.cc  inverse_dynamics.cc  inverse_kinematics.cc  opspace_dynamics.cc  opspace_dynamics_aba.cc  opspace_kinematics.cc  simulation.cc
src/eigen/: SpatialDeclarations.h  SpatialMotion.h  SpatialMotionBase.h
src/matlab/: CMakeLists.txt  centrifugal_coriolis.cc  delete_articulated_body.cc  discrete_inverse_dynamics.cc  gravity.cc  hessian.cc  inertia.cc  inverse_dynamics.cc  inverse_dynamics_position_derivative.cc  inverse_dynamics_velocity_derivative.cc  inverse_kinematics.cc  jacobian.cc  jacobian_dynamic_inverse.cc  load_model.cc  position.cc
src/parsers/: json.cc  urdf.cc  yaml.cc
src/python/: CMakeLists.txt  eigen.cc  spatial_dyn.cc  spatialdyn.py
src/structs/: articulated_body.cc  articulated_body_cache.h  graphics.cc  joint.cc  options.cc  rigid_body.cc
src/util/: json.cc  timer.cc  urdf.cc
src/utils/: timer.cc
test/: CMakeLists.txt  tests.cc
(+295 files in other folders)
