############################################################
# CMakeLists for the spatial-dyn library.
#
# Copyright 2021. All Rights Reserved.
#
# Created: June 3, 2021
# Authors: Toki Migimatsu
############################################################

message(STATUS "Configuring ${PROJECT_NAME} examples.")

add_subdirectory(opspace)
